--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ main .main_promo_text{
     align-items:center;
     max-width: 400px;
 }
-.plan .plan_subheader{
+.plan .plan_subheader, .reviews .review_subheader{
     color:#555ACE;
     text-transform: uppercase;
     font-weight: 500;
@@ -164,4 +164,47 @@ main .main_promo_text{
     margin-top: 20px;
     font-weight: 500;
     text-align: center;
+}
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+.review {
+    max-width: 300px;
+    min-height: 100px;
+    border: 2px solid #555ACE;
+    background-color: #797cd1;
+    border-radius: 5px; 
+    padding: 16px;
+    margin-top: 20px;
+}
+  .review img {
+    float: left; 
+    margin-right: 20px; 
+    border-radius: 50%;
+    width: 30%;
+    height: 30%;
+}
+  .review span {
+    font-size: 18px;
+    margin-right: 15px;
+}
+  .reviews{
+    margin-top: 20px;
+}
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#555ACE;
+    min-height: 70px;
+    width: 100%;
+    margin-top: 20px;
+}
+footer .footer_text{
+    color:white;
+    font-weight: 500;
+    font-size: 16px;
 }
