--- a/css/style2.css
+++ b/css/style2.css
@@ -1,20 +1,31 @@
+.header{
+    color:#555ACE;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 30px;
+    text-align: center;
+    line-height: 45px;
+}
 .parking{
+    width: 100%;
     margin-top: 20px;
     display: flex;
-    justify-content: start;
+    justify-content:space-around;
     flex-wrap: wrap;
 }
 .parking .place{
     display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    max-width: 500px;
+    flex-direction: column;
+    align-items: start;
+    width: 100%;
+    margin-top: 30px;
 }
 .parking .place .place_subheader{
     color:#48466D;
     text-decoration: none;
     line-height: 15px;
     text-align:center;
+    padding-left: 50px;
 }
 .parking .place .place_text{
     color:#48466D;
@@ -23,6 +34,7 @@
     font-size: 17px;
     line-height: 30px;
     text-align:center;
+    padding-left: 50px;
 }
 .parking .place .place_btn{
     margin-top: 19px;
@@ -36,4 +48,5 @@
     font-size: 14px;
     font-weight: 400;
     text-transform: uppercase;
+    margin-left: 50px;
 }
