--- a/css/style2.css
+++ b/css/style2.css
@@ -5,13 +5,11 @@
     font-size: 30px;
     text-align: center;
     line-height: 45px;
+    margin-top: 20px;   
 }
 .parking{
     width: 100%;
     margin-top: 20px;
-    display: flex;
-    justify-content:space-around;
-    flex-wrap: wrap;
 }
 .parking .place{
     display: flex;
