--- a/css/style5.css
+++ b/css/style5.css
@@ -14,6 +14,7 @@ body{
 }
 .container {
 padding: 16px;
+margin-bottom: 20px;
 }
 input[type=text], input[type=password] {
 width: 100%;
@@ -44,4 +45,8 @@ width: 100%;
 .regis {
 background-color: #f1f1f1;
 text-align: center;
+}
+.avtorbtn:active {
+    box-shadow:7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+    transform: translateY(4px);
 }
