--- a/css/style6.css
+++ b/css/style6.css
@@ -7,3 +7,36 @@
     line-height: 45px;
     margin-top: 20px;
 }
+hr{
+border: 1px solid #f1f1f1;
+margin-bottom: 25px;
+width: 80%;
+margin: 10px auto;
+
+}
+data{
+    width: 100%;
+    margin-bottom: 20px;
+}
+span{
+    font-weight: 700;
+    font-size: 20px;
+    color:#48466D;
+    line-height: 15px;
+    text-align:center;
+    margin-top: 5px;
+}
+data .text{
+    color:#48466D;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 15px;
+    text-align:center;
+    margin-top: 5px;
+}
+.item{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 30px;
+}
