--- a/css/style2.css
+++ b/css/style2.css
@@ -1,12 +1,3 @@
-.header{
-    color:#555ACE;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: 30px;
-    text-align: center;
-    line-height: 45px;
-    margin-top: 20px;   
-}
 .parking{
     width: 100%;
     margin-top: 20px;
@@ -50,7 +41,120 @@
     margin-left: 50px;
     cursor: pointer;
 }
-.parking .place .place_btn:active {
+.parking .place .place_btn:active, .paymentbtn:active {
     box-shadow:7px 6px 28px 1px rgba(0, 0, 0, 0.24);
     transform: translateY(4px);
 }
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,0.7);
+    z-index: 1;
+    opacity: 0;
+    -webkit-transition: 200ms ease-in; 
+    -moz-transition: 200ms ease-in;
+    transition: 200ms ease-in;
+    pointer-events: none;
+    margin: 0;
+    padding: 0;
+}
+.modal:target {
+    opacity: 1;
+	pointer-events: auto;
+    overflow-y: auto;
+}
+.modal-dialog {
+    position: relative;
+    width: 40%;
+    margin: 30px auto;
+}
+.modal-content{
+    position: relative;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 0.3rem;
+    outline: 0;
+}
+.modal-header{
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 15px;
+    border-bottom: 1px solid #eceeef;
+}
+.modal-title{
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 1.5;
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+.close{
+    float: right;
+    font-family: sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: 0.5;
+    text-decoration: none;
+}
+.close:focus, .close:hover{
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    opacity: 0.75;
+}
+.modal-body{
+  position: relative;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 15px;
+    overflow: auto;
+}
+input[type=text], input[type=time], input[type=tel], input[type=date], input[type=password]{
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+    border-radius: 10px;
+    }
+    input[type=text]:focus, input[type=time]:focus, input[type=tel]:focus, input[type=date]:focus, input[type=password]:focus{
+    background-color: #ddd;
+    outline: none;
+    }
+    hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+    }
+    .paymentbtn {
+    background: linear-gradient(0deg, #555ACE 0%, #797cd1 100%);
+    box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.12);
+    color: white;
+    padding: 16px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    }
