--- a/css/style3.css
+++ b/css/style3.css
@@ -41,7 +41,7 @@ body{
     line-height: 25px;
     padding-left: 50px;
 }
-.review_btn{
+.review_btn, .reviewbtn{
     margin-top: 19px;
     width: 172px;
     height: 46px;
@@ -52,12 +52,119 @@ body{
     color:#FFFFFF;
     font-size: 14px;
     font-weight: 400;
-    text-transform: uppercase;
-    margin-left: 50px;
+    text-transform: uppercase;      
     cursor: pointer;
     margin-bottom: 20px;
 }
-.review_btn:active {
+.review_btn:active, .reviewbtn:active {
     box-shadow:7px 6px 28px 1px rgba(0, 0, 0, 0.24);
     transform: translateY(4px);
 }
+.modal {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,0.7);
+    z-index: 1;
+    opacity: 0;
+    -webkit-transition: 200ms ease-in; 
+    -moz-transition: 200ms ease-in;
+    transition: 200ms ease-in;
+    pointer-events: none;
+    margin: 0;
+    padding: 0;
+}
+.modal:target {
+    opacity: 1;
+	pointer-events: auto;
+    overflow-y: auto;
+}
+.modal-dialog {
+    position: relative;
+    width: 40%;
+    margin: 30px auto;
+}
+.modal-content{
+    position: relative;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    background-color: #fff;
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 0.3rem;
+    outline: 0;
+}
+.modal-header{
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: 15px;
+    border-bottom: 1px solid #eceeef;
+}
+.modal-title{
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 1.5;
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+.close{
+    float: right;
+    font-family: sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: 0.5;
+    text-decoration: none;
+}
+.close:focus, .close:hover{
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+    opacity: 0.75;
+}
+.modal-body{
+  position: relative;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    overflow: auto;
+    padding: 15px;
+}
+.add_review{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+}
+input[type=text]{
+    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    border: none;
+    background: #f1f1f1;
+    border-radius: 10px;
+    }
+    input[type=text]:focus{
+    background-color: #ddd;
+    outline: none;
+    }
+    hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+    }
