--- a/css/style2.css
+++ b/css/style2.css
@@ -3,6 +3,16 @@
     margin-top: 20px;
     margin-bottom: 20px;
 }
+.header{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 100;
+    line-height: normal;
+    margin-top: 200px;
+}
 .parking .place{
     display: flex;
     flex-direction: column;
